[package]
name = "bchain"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
chrono = "0.4.39"
hex = "0.4.3"
k256 = "0.13.4"
serde = { version = "1.0.217", features = ["derive"] }
serde_bytes = "0.11.17"
serde_json = "1.0.135"
sha256 = "1.5.0"
tokio = { version = "1", features = ["full"] }
xid = "1.1.1"
